--- a/package.json
+++ b/package.json
@@ -16,13 +16,23 @@
   "author": "Dustin Sanders",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.4.5",
     "babel-eslint": "^4.1.8",
+    "babel-loader": "^6.2.2",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "babel-preset-stage-2": "^6.3.13",
     "babel-register": "^6.4.3",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^5.0.0",
     "eslint-plugin-react": "^3.16.1",
-    "lodash": "^4.2.1"
+    "express": "^4.13.4",
+    "lodash": "^4.2.1",
+    "piping": "^0.3.0",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "webpack": "^1.12.13",
+    "webpack-dev-middleware": "^1.5.1"
   }
 }
