--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-obj",
   "version": "0.0.1",
-  "description": "express DOM elements as objects in React, alternative to jsx",
+  "description": "represent DOM elements as objects in React, alternative to jsx",
   "main": "index.js",
   "scripts": {
     "dev": "node index.js",
+    "src": "node src/register.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -16,13 +17,14 @@
   "author": "Dustin Sanders",
   "license": "ISC",
   "devDependencies": {
+    "babel": "^6.3.26",
     "babel-core": "^6.4.5",
     "babel-eslint": "^4.1.8",
+    "babel-helpers": "^6.4.5",
     "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
-    "babel-preset-stage-2": "^6.3.13",
     "babel-register": "^6.4.3",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^5.0.0",
