--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "eslint-config-airbnb": "^5.0.0",
     "eslint-plugin-react": "^3.16.1",
     "express": "^4.13.4",
-    "lodash": "^4.2.1",
+    "lodash.isarray": "^4.0.0",
     "piping": "^0.3.0",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
