--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "react-object",
+  "name": "react-obj",
   "version": "0.0.1",
   "description": "represent DOM elements as objects in React, alternative to jsx",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
+    "build": "babel src/index.js --out-file lib/index.js",
+    "clean": "rm -rf lib/",
     "dev": "node index.js",
+    "prebuild": "npm run clean && mkdir lib && npm test",
+    "preversion": "npm run build",
     "src": "node src/register.js",
     "test": "ava --fail-fast"
   },
@@ -15,7 +19,10 @@
     "xml",
     "json"
   ],
-  "author": "Dustin Sanders",
+  "author": {
+    "name": "Dustin Sanders",
+    "url": "https://github.com/dustinsanders"
+  },
   "license": "ISC",
   "devDependencies": {
     "ava": "^0.11.0",
