--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "eslint-config-airbnb": "^5.0.0",
     "eslint-plugin-react": "^3.16.1",
     "express": "^4.13.4",
-    "lodash.isarray": "^4.0.0",
     "piping": "^0.3.0",
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7",
     "webpack": "^1.12.13",
     "webpack-dev-middleware": "^1.5.1"
+  },
+  "dependencies": {
+    "lodash.isarray": "^4.0.0"
   }
 }
