--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-select": "^1.0.0-beta8",
     "webpack": "^1.12.13",
     "webpack-dev-middleware": "^1.5.1"
   },
