--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "license": "ISC",
   "devDependencies": {
     "ava": "^0.11.0",
-    "babel": "^6.3.26",
+    "babel-cli": "^6.5.1",
     "babel-core": "^6.5.1",
     "babel-eslint": "^4.1.8",
     "babel-helpers": "^6.4.5",
