--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "prebuild": "npm run clean && mkdir lib && npm test",
     "preversion": "npm run build",
     "src": "node src/register.js",
-    "test": "ava --fail-fast"
+    "test": "ava --fail-fast -v"
   },
   "keywords": [
-    "object",
     "react",
     "jsx",
+    "alternative",
+    "jsx alternative",
+    "object",
+    "dom",
     "xml",
     "json"
   ],
@@ -49,6 +52,7 @@
     "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-select": "^1.0.0-beta8",
+    "sinon": "^1.17.3",
     "webpack": "^1.12.13",
     "webpack-dev-middleware": "^1.5.1"
   },
