--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-config-airbnb": "^5.0.0",
     "eslint-plugin-react": "^3.16.1",
     "express": "^4.13.4",
+    "jsdom": "^8.0.2",
     "piping": "^0.3.0",
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
